; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/xml/test/extr_rxml_test.c_rxml_log_document.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/xml/test/extr_rxml_test.c_rxml_log_document.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"rxml: Failed to load document: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @rxml_log_document to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rxml_log_document(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32* @rxml_load_document(i8* %4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @stderr, align 4
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %10)
  br label %18

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @rxml_root_node(i32* %13)
  %15 = call i32 @print_siblings(i32 %14, i32 0)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @rxml_free_document(i32* %16)
  br label %18

18:                                               ; preds = %12, %8
  ret void
}

declare dso_local i32* @rxml_load_document(i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @print_siblings(i32, i32) #1

declare dso_local i32 @rxml_root_node(i32*) #1

declare dso_local i32 @rxml_free_document(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
